--- a/gb/24/6/7/n14265901.md
+++ b/gb/24/6/7/n14265901.md
@@ -10,20 +10,20 @@
 <h2>马雷斯卡成为“蓝军”主帅</h2>
 <p>英超赛季一结束，切尔西就解雇了主帅波切蒂诺（Mauricio Pochettino），令人有些意外。阿根廷人本赛季带队虽然没有达到预期，不过在收官阶段，他带领“蓝军”取得了一波“五连胜”，帮助球队拿到欧战的名额。最终，波切蒂诺还是没能保住自己的帅位。而切尔西这种解雇方式，也引起了很多主帅不满，让人望而却步。</p>
 <p>结果，切尔西从下赛季将升入英超的莱斯特城队，挖来了主教练马雷斯卡（Enzo Maresca）。为此，“蓝军”不得不要向“狐狸”支付1000万英镑的解约金。切尔西与马雷斯卡签署了一份5+1年的长期合同，允许他带来6名助教。显然，切尔西高层对意大利人显得很有信心，希望双方能够长期合作，同时也同意赋予他一定的权力。</p>
-<figure id="attachment_14265904" aria-describedby="caption-attachment-14265904" style="width: 498px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14265904-GettyImages-2062915022-603x400.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-14265904" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265904-GettyImages-2062915022-603x400.jpg" alt="" width="498" b="311" /></a><figcaption id="caption-attachment-14265904" class="wp-caption-text">英超豪门切尔西出人意料的挖来了莱斯特城队主教练、44岁的意大利人马雷斯卡（Enzo Maresca），担任“蓝军”主帅。(Stu Forster/Getty Images)</figcaption></figure>
+<figure id="attachment_14265904" aria-describedby="caption-attachment-14265904" style="width: 498px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14265904-GettyImages-2062915022-603x400.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class=" wp-image-14265904" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265904-GettyImages-2062915022-603x400.jpg" alt="" width="498" b="311" /></a><figcaption id="caption-attachment-14265904" class="wp-caption-text">英超豪门切尔西出人意料的挖来了莱斯特城队主教练、44岁的意大利人马雷斯卡（Enzo Maresca），担任“蓝军”主帅。(Stu Forster/Getty Images)</figcaption></figure>
 <p>今年44岁的马雷斯卡球员时代司职中场，曾效力于尤文图斯、博洛尼亚、佛罗伦萨等队。2017年，37岁的马雷斯卡退役后，拿起了教鞭，曾经担任过塞维利亚、西汉姆的助理教练。</p>
 <p>2020年，马雷斯卡出任曼城U23主帅，因带队成绩优异，次年他被帕尔马挖走，担任主教练。但他执教这家意乙球队战绩不佳，半年后就被解雇。2022年，马雷斯卡回归曼城，担任瓜迪奥拉的助教，随队收获了“三冠王”。2023年7月，马雷斯卡出任莱斯特城主帅，并率队夺得英冠冠军，下赛季直升英超。</p>
 <h2>“狂人”穆里尼奥登录土超</h2>
 <p>上赛季中，“狂人”穆里尼奥（José Mourinho）从罗马队下课之后，一直在家休息。期间，他再次与切尔西联系到一起，很多“蓝军”球迷期待他能够“三进宫”，但“蓝军”新任老板伯利并未动心。由于42岁的阿隆索上赛季带领勒沃库森在德甲登顶，彻底颠覆了拜仁统治，现在很多豪门俱乐部都对年轻的主教练更感兴趣，希望能够复制西班牙人的成功。</p>
 <p>2004年5月，带领葡超波尔图勇夺欧冠冠军的穆里尼奥，被老板阿布拉莫维奇请到了切尔西。随后的20年里，葡萄牙人凭借不俗的带队成绩，以及制造话题的能力，在欧洲足坛已经家喻户晓。不论是欧冠、欧联杯、欧协杯等洲际赛事，还是英超、意甲、西甲、足总杯等国内战线，“狂人”捧杯拿到手软。</p>
-<figure id="attachment_14265906" aria-describedby="caption-attachment-14265906" style="width: 498px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14265906-GettyImages-2155616814-599x400.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-14265906" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265906-GettyImages-2155616814-599x400.jpg" alt="" width="498" b="290" /></a><figcaption id="caption-attachment-14265906" class="wp-caption-text">61岁葡萄牙“狂人”穆里尼奥（José Mourinho）选择加盟土超联赛亚军球队——费内巴切，出任主教练，下赛季带队征战欧冠赛场。(Alex Pantling/Getty Images)</figcaption></figure>
+<figure id="attachment_14265906" aria-describedby="caption-attachment-14265906" style="width: 498px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14265906-GettyImages-2155616814-599x400.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class=" wp-image-14265906" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265906-GettyImages-2155616814-599x400.jpg" alt="" width="498" b="290" /></a><figcaption id="caption-attachment-14265906" class="wp-caption-text">61岁葡萄牙“狂人”穆里尼奥（José Mourinho）选择加盟土超联赛亚军球队——费内巴切，出任主教练，下赛季带队征战欧冠赛场。(Alex Pantling/Getty Images)</figcaption></figure>
 <p>不过从他的执教履历来看，这位冠军教练近年来开始走下坡路。从切尔西、国米、皇马、曼联，再到热刺、罗马，他的“魔力”在逐渐消失。年初被“红狼”扫地出门后，穆帅一度无人问津。经过一段时间沉淀后，为了再次证明自己，61岁的穆里尼奥没有去沙特俱乐部淘金，而是选择加盟土耳其超级联赛亚军——费内巴切。</p>
 <p>穆里尼奥与费内巴切签订了2年合同，他的年薪达到2000万欧元。这是土超联赛主教练的最高薪水，与瓜迪奥拉在曼城的薪资持平。请来穆里尼奥后，费内巴切还准备拿出2亿欧元的资金，让“狂人”在转会市场上一展拳脚。</p>
 <p>相较于欧洲五大联赛，土超联赛的关注度不高，豪门球队只有两家——费内巴切和加拉塔萨雷。上赛季，费内巴切整个赛季只输掉了一场比赛，但最终仍然不敌老对手加拉塔萨雷排在第二名。这让费内巴切高层非常懊恼，于是邀请来“狂人”，希望其能够帮助球队，在下赛季打破连续三个赛季被加拉塔萨雷压制的局面；同是在欧冠赛场，也能有所作为。</p>
-<figure id="attachment_14265903" aria-describedby="caption-attachment-14265903" style="width: 499px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14265903-GettyImages-1905286950-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-14265903" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265903-GettyImages-1905286950-600x400.jpg" alt="" width="499" b="324" /></a><figcaption id="caption-attachment-14265903" class="wp-caption-text">61岁葡萄牙“狂人”穆里尼奥（José Mourinho）选择加盟土超联赛亚军球队——费内巴切，出任主教练，下赛季带队征战欧冠赛场。(Paolo Bruno/Getty Images)</figcaption></figure>
+<figure id="attachment_14265903" aria-describedby="caption-attachment-14265903" style="width: 499px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2024/06/id14265903-GettyImages-1905286950-600x400.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class=" wp-image-14265903" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265903-GettyImages-1905286950-600x400.jpg" alt="" width="499" b="324" /></a><figcaption id="caption-attachment-14265903" class="wp-caption-text">61岁葡萄牙“狂人”穆里尼奥（José Mourinho）选择加盟土超联赛亚军球队——费内巴切，出任主教练，下赛季带队征战欧冠赛场。(Paolo Bruno/Getty Images)</figcaption></figure>
 <p>众所周知，穆里尼奥的战术策略主要是以硬度防守，主打反击。很多人认为，“狂人”的战术过于急功近利。近几个赛季，他执教的几个俱乐部都没能延续他此前取得的成功。</p>
 <p>对土超球队来讲，即使拿到联赛冠军，也需要从欧冠附加赛开始打起。而穆里尼奥更擅长的就是打“杯赛”，即使执教罗马这样的意甲中游球队，“狂人”也能够连续两年带队闯入欧战决赛。费内巴切深知穆里尼奥的过往战绩，选择葡萄牙人算得上是精准定位。另外，“狂人”也是流量明星，深得很多球迷喜爱，对提高俱乐部的名声会有很大帮助。</p>
-<p>责任编辑：郑煌</p>
+<p>责任编辑：郑煌#</p>
 	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/14/n14225765.md#1">德甲：经过120年等待 勒沃库森提前5轮夺冠</a></li>
@@ -32,29 +32,29 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262238.md#1">王家马德里2:0胜多特蒙德 第15次登顶欧冠</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772976.md#1" target="_blank">林辉：中共当年盘剥延安人 被骂很“黑”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/29/n10882266.md#1" target="_blank">中共绑架法轮功学员 美国务院：停止迫害</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/27/n3693107.md#1" target="_blank">一诺：中共假“关爱”之名对青少年的洗脑迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258414.md#1">安金藏剖心的一刀 忠义震慑逆乱 挽救了唐朝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261254.md#1">【未解之谜】盘点宇宙的终极命运 只有一种人可以逃脱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263533.md#1">研究过上千例濒死体验 美前牧师谈死后世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14258987.md#1">高智晟律师风骨纪实 韩亦言笔下动人心魄的传奇人物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264723.md#1">【时事金扫描】亲历“六四”见证地狱战场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263982.md#1">【菁英论坛】35年崩而未溃 六四后中国魔变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264734.md#1">【探索时分】乌克兰获重磅军援 瑞典萨博预警机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264460.md#1">传中央巡视组秘查唐山和保定 满大街是警察</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264595.md#1">陷负面传闻 江泽民长子江绵恒职务生变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264453.md#1">山西沁县政协主席被杀 传与拆迁纠纷有关</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264874.md#1">范冰冰不再试水温 工作室开通社交平台新账号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264041.md#1">当年为家庭退出娱乐圈 黎姿回应复出传闻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264149.md#1">大陆演唱遭虫子袭击 张信哲与邓紫棋反应迥异</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264910.md#1">周润发豪宅成陆客打卡点 已故李小龙曾住附近</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263721.md#1">母陈尸顶楼 唐治平一度失联 经纪人代发声</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/30/n14260837.md#1">秋葵热量低又营养 教你如何料理</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264003.md#1">枕头套比马桶还脏？微生物专家告诉你该多久洗一次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263686.md#1">买不起新鲜蔬果 吃冷冻的也一样健康吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262822.md#1">西瓜皮不要丢 这10种做法让“垃圾”变美食</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264509.md#1">什么事不适合用简讯传达？ 礼仪专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306146.md#1">老花 近视 飞蚊症 干眼症 中医7招应对眼疾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306766.md#1">【全球新闻】乌克兰跨境攻入俄罗斯 数千人撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/7/n14265901.htm">马雷斯卡成为切尔西主帅 穆里尼奥登陆土超</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265901.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
